<resources>
    <string name="app_name">Login And Sign Up</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_or_email">Username, or Email</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">Or</string>
    <string name="create_new_facebook_account">Create New Facebook Account</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="phone_or_email">Phone or email</string>
</resources>