<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/loginbackground"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/imageView"
        android:gravity="center">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Espanol Francais"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" More..."
            android:textColor="@color/blue"
            android:textAlignment="center"/>
    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_below="@+id/imageView"
        android:id="@+id/relativeLayoutBelowImageView"
        android:layout_marginTop="40dp">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/phone_or_email"
        android:textColorHint="@color/gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="1"
        android:autofillHints=""
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/editTextTextPersonName"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="1"
        android:autofillHints=""
        android:textSize="15sp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/log_in"
            android:layout_below="@id/editTextTextPassword"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:gravity="center"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:backgroundTintMode="screen"/>

         <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textColor="@color/blue"
            android:gravity="end"
            android:layout_below="@+id/editTextTextPassword"/>





        <TextView
            android:id="@+id/loginWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_below="@+id/forgotPassword" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:id="@+id/relativeLayout2"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="12dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@android:color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/or"
                android:textSize="12sp"/>
        </RelativeLayout>


        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:text="@string/create_new_facebook_account"
            android:layout_below="@id/relativeLayout2"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:gravity="center"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:backgroundTintMode="screen"
            android:backgroundTint="@color/green"/>


    </RelativeLayout>

</RelativeLayout>